# tk_2428

./: .gitignore  README.md  claudeはこのファイルを無視するように.py  project_structure.md  pyproject.toml  requirements.txt  run.py
src/prism/: __init__.py  claude.py  config.py  config.setting  db.py  routes.py  scraper.py
src/prism/static/css/: style.css
src/prism/static/js/: .gitignore  camera.js  cursor.js  edge.js  graph3d.js  help.js  node.js  plane.js  ui-controls.js
src/prism/templates/: base.html
src/prism/tests/: routes_test.py
